Fix layout issue on portfolio page

--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -63,43 +63,33 @@ body {
 
 #bodywrapper {
   margin: 0px;
-  position: absolute;
-  padding-top: 30px;
+  position: relative;
+  padding-top: 50px;
   padding-left: 15%;
   padding-right: 15%;
-  position: relative;
+  @include align(center, center);
 }
 
 .container {
-  align-self: center;
   margin-bottom: 60px;
+  @include align(center, center);
   height: auto;
   min-width: $rightcolumnwidth + 2 * $containerpadding;
   position: relative;
   @include shadow_around_div(10px, $darkfont);
-  padding: 5%;
   border-radius: 30px;
   background-color: white;
   word-wrap: break-word;
-  .left {
-    @include align(left, left);
+  .column {
+    position: relative;
+    margin: 30px auto;
+    @include align(center, left);
     top: $columnpadding;
     left: $columnpadding;
     padding: $columnpadding;
     width: $leftcolumnwidth;
     display: inline-block;
-    min-width: 35%;
-    height: auto;
-    vertical-align: top;
-  }
-  .right {
-    @include align(center, center);
-    position: relative;
-    padding: $columnpadding;
-    padding-bottom: 90px;
-    width: $rightcolumnwidth;
-    min-width: 35%;
-    display: inline-block;
+    min-width: 300px;
     height: auto;
     vertical-align: top;
     a linkbutton {
@@ -107,10 +97,9 @@ body {
       position: absolute;
       left: $columnpadding + 0.5 * ($rightcolumnwidth - $learnmorewidth);
       margin-top: 30px;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
     }
   }
-
 }
 
 img {
